# master-thesis

./: .gitignore  README.md
project/create_csv/: Cargo.toml  create_run.py  random_raw_num.csv  run.sh
project/create_csv/src/: main.rs
project/gd_lg/: Cargo.toml
project/gd_lg/src/: main.rs
project/practice/: Cargo.toml  run.sh
project/practice/result/: resultKnn_100.txt  resultKnn_1000.txt
project/practice/src/: main.rs
project/rust_knn_streaming/: Cargo.toml  README.md  prepare.sh  run.sh  single.sh
project/rust_knn_streaming/analysis/: Untitled.ipynb  b3-s1-deep_b3-s1-arc_b3-s2-deep_b3-s2-arc.csv  deepcopy_vs_arc.eps  ganglia-b3-s1-arc.csv  ganglia-b3-s1-deep.csv  ganglia-b3-s2-arc.csv  ganglia-b3-s2-deep.csv  preprocessing.eps  query.eps  runtime.ipynb  runtime_analysis.ipynb  strategy1_vs_strategy2.eps  total.eps
project/rust_knn_streaming/prediction/: methodarc_k15000_nneighbors10_n_batch1.txt  methodarc_k15000_nneighbors10_n_batch2.txt  methodarc_k15000_nneighbors10_n_batch3.txt  methodarc_k15000_nneighbors20_n_batch1.txt  methodarc_k15000_nneighbors20_n_batch2.txt  methodarc_k15000_nneighbors20_n_batch3.txt  methodarc_k15000_nneighbors30_n_batch1.txt  methodarc_k15000_nneighbors30_n_batch2.txt  methodarc_k15000_nneighbors30_n_batch3.txt  methodarc_k20000_nneighbors10_n_batch1.txt  methodarc_k20000_nneighbors10_n_batch2.txt  methodarc_k20000_nneighbors10_n_batch3.txt  methodarc_k20000_nneighbors20_n_batch1.txt  methodarc_k20000_nneighbors20_n_batch2.txt  methodarc_k20000_nneighbors20_n_batch3.txt  methodarc_k20000_nneighbors30_n_batch1.txt  methodarc_k20000_nneighbors30_n_batch2.txt  methodarc_k20000_nneighbors30_n_batch3.txt  methodarc_k25000_nneighbors10_n_batch1.txt  methodarc_k25000_nneighbors10_n_batch2.txt  methodarc_k25000_nneighbors10_n_batch3.txt  methodarc_k25000_nneighbors20_n_batch1.txt  methodarc_k25000_nneighbors20_n_batch2.txt  methodarc_k25000_nneighbors20_n_batch3.txt  methodarc_k25000_nneighbors30_n_batch1.txt  methodarc_k25000_nneighbors30_n_batch2.txt  methodarc_k25000_nneighbors30_n_batch3.txt  methoddeeepcopy_k15000_nneighbors10_n_batch1.txt  methoddeeepcopy_k15000_nneighbors10_n_batch2.txt  methoddeeepcopy_k15000_nneighbors10_n_batch3.txt  methoddeeepcopy_k15000_nneighbors20_n_batch1.txt  methoddeeepcopy_k15000_nneighbors20_n_batch2.txt  methoddeeepcopy_k15000_nneighbors20_n_batch3.txt  methoddeeepcopy_k15000_nneighbors30_n_batch1.txt  methoddeeepcopy_k15000_nneighbors30_n_batch2.txt  methoddeeepcopy_k15000_nneighbors30_n_batch3.txt  methoddeeepcopy_k20000_nneighbors10_n_batch1.txt  methoddeeepcopy_k20000_nneighbors10_n_batch2.txt  methoddeeepcopy_k20000_nneighbors10_n_batch3.txt  methoddeeepcopy_k20000_nneighbors20_n_batch1.txt  (+14 more)
project/rust_knn_streaming/profile/: method1_nbatch1_k15000_nneighbors10.txt  (+53 more)
project/rust_merge_sort/: Cargo.toml  README.md  run.sh
project/test_dist_memory/: Cargo.toml
project/vector_alloc_test/: Cargo.toml  README.md
(+825 files in other folders)
