[package]
name = "create_csv"
version = "0.1.0"
authors = ["sinsakuokazaki <golisaku4639@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.1"
rand = "0.7.0"
ndarray = "0.12.1"
serde = "1.0.101"
serde_derive = "1.0.101"