[package]
name = "test_dist_memory"
version = "0.1.0"
authors = ["sinsakuokazaki <golisaku4639@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.1"
ndarray = "0.12.1"
ndarray-linalg = {version = "0.11", features = ["intel-mkl"]}
serde = "1.0.101"