[package]
name = "vector_alloc_test"
version = "0.1.0"
authors = ["sinsakuokazaki <golisaku4639@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false